<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>

        <variable
            name="version"
            type="String" />

        <variable
            name="email"
            type="String" />
        <variable
            name="viewmodel"
            type="com.omargtz.logintestexample.authentication.presentation.viewmodel.LoginViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_content"
        android:background="@drawable/bg_app"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
            android:layout_height="0dp" android:id="@+id/nestedScrollView"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/linearLayout">

                <ImageView
                    android:layout_width="176dp"
                    android:layout_height="176dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:contentDescription="TODO" android:src="@drawable/img_logo_urbvan"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="45dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/txt_name_and_phone"
                        android:textColor="@color/white" />

                    <com.google.android.material.textfield.TextInputLayout

                        android:id="@+id/til_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/grid_2"
                        android:textColorHint="@android:color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_name_and_phone"
                            android:inputType="text"
                            android:text="@{email}"
                            android:singleLine="true"
                            android:textColor="@android:color/white"/>
                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="35dp"
                        android:text="@string/txt_password"
                        android:textColor="@color/white" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@android:color/white"
                        android:textColorHint="@android:color/white"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@android:color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/input_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/txt_hint_password"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textColor="@android:color/white"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/txt_version"
                        android:layout_marginTop="@dimen/grid_2"
                        android:textColor="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@{version}"
                        tools:text="v6.5.1"/>

                </LinearLayout>



            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/txt_login"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            app:backgroundTint="@color/purple_700"
            android:layout_marginBottom="@dimen/grid_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <include
            android:id="@+id/loading"
            layout="@layout/view_loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>